svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: saumyalbfinal
  name: saumyalbfinal
  namespace: saumya-project
spec:
  ports:
  - name: 1234-80
    port: 1234
    protocol: TCP
    targetPort: 80
  selector:
    app: saumya-cisco-app
  type: ClusterIP
status:
  loadBalancer: {}
