route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saumya-route-rule-1
  namespace: saumya-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.saumya.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: saumyalbfinal #name of internal lb/service
            port:
              number: 80
